--- a/_locales/zh-TW/pixmkcode-strings.json
+++ b/_locales/zh-TW/pixmkcode-strings.json
@@ -1,5 +1,5 @@
 {
-  "PixFunction.APRILTAG|block": "AprilTag(16h5)",
+  "PixFunction.APRILTAG|block": "aprilTag(16h5)",
   "PixFunction.SPHERE_DETECTION|block": "球體偵測",
   "PixFunction.COLOR_DETECTION|block": "顏色偵測",
   "PixFunction.COLOR_LABEL|block": "顏色組合偵測",
@@ -104,21 +104,21 @@
   "pixetto.get_voice_command|block": "語音命令 辨識到 %vcmd",
   "pixetto.getLanesField|block": "車道偵測| %number1",
   "pixetto.isDetected|block": "辨識到物體",
-  "PixApriltagField.APRILTAG_POS_X|block": "X方向座標",
-  "PixApriltagField.APRILTAG_POS_Y|block": "Y方向座標",
-  "PixApriltagField.APRILTAG_POS_Z|block": "Z方向座標",
-  "PixApriltagField.APRILTAG_ROT_X|block": "X旋轉角度",
-  "PixApriltagField.APRILTAG_ROT_Y|block": "Y旋轉角度",
-  "PixApriltagField.APRILTAG_ROT_Z|block": "Z旋轉角度",
-  "PixApriltagField.APRILTAG_CENTER_X|block": "中心X",
-  "PixApriltagField.APRILTAG_CENTER_Y|block": "中心Y",
-  "PixLanesField.LANES_LX1|block": "車道左側 X1 座標",
-  "PixLanesField.LANES_LY1|block": "車道左側 Y1 座標",
-  "PixLanesField.LANES_LX2|block": "車道左側 X2 座標",
-  "PixLanesField.LANES_LY2|block": "車道左側 Y2 座標",
-  "PixLanesField.LANES_RX1|block": "車道右側 X1 座標",
-  "PixLanesField.LANES_RY1|block": "車道右側 Y1 座標",
-  "PixLanesField.LANES_RX2|block": "車道右側 X2 座標",
-  "PixLanesField.LANES_RY2|block": "車道右側 Y2 座標",
+  "PixApriltagField.APRILTAG_POS_X|block": "x 方向座標",
+  "PixApriltagField.APRILTAG_POS_Y|block": "y 方向座標",
+  "PixApriltagField.APRILTAG_POS_Z|block": "z 方向座標",
+  "PixApriltagField.APRILTAG_ROT_X|block": "x 旋轉角度",
+  "PixApriltagField.APRILTAG_ROT_Y|block": "y 旋轉角度",
+  "PixApriltagField.APRILTAG_ROT_Z|block": "z 旋轉角度",
+  "PixApriltagField.APRILTAG_CENTER_X|block": "中心 x",
+  "PixApriltagField.APRILTAG_CENTER_Y|block": "中心 y",
+  "PixLanesField.LANES_LX1|block": "車道左側 x1 座標",
+  "PixLanesField.LANES_LY1|block": "車道左側 y1 座標",
+  "PixLanesField.LANES_LX2|block": "車道左側 x2 座標",
+  "PixLanesField.LANES_LY2|block": "車道左側 y2 座標",
+  "PixLanesField.LANES_RX1|block": "車道右側 x1 座標",
+  "PixLanesField.LANES_RY1|block": "車道右側 y1 座標",
+  "PixLanesField.LANES_RX2|block": "車道右側 x2 座標",
+  "PixLanesField.LANES_RY2|block": "車道右側 y2 座標",
   "{id:category}Pixetto": "Pixetto"
 }
